Servicio notificacion_estado_usuario masivo udistrital/notificacion_api#5
Servicio para crear notificacion_estado_usuario de forma masiva cuando se conecta un usuario y tiene notificaciones nuevas asignadas a su perfil
